tests/ts_builtin_lib_tests/ts_builtin_lib_tests.exp
Error ----------------------------------------------------------------------------- <BUILTINS>/lib.decorators.d.ts:37:39

Cannot instantiate `Record` because in type argument `K`: number [1] is incompatible with key set [2].
[incompatible-type]

   <BUILTINS>/lib.decorators.d.ts:37:39
     37| type DecoratorMetadataObject = Record<PropertyKey, unknown> & object;
                                               ^^^^^^^^^^^ [1]

References:
   <BUILTINS>/lib.es5.d.ts:1614:23
   1614| type Record<K extends keyof any, T> = {
                               ^^^^^^^^^ [2]


Error ----------------------------------------------------------------------------- <BUILTINS>/lib.decorators.d.ts:37:39

Cannot instantiate `Record` because in type argument `K`: symbol [1] is incompatible with key set [2].
[incompatible-type]

   <BUILTINS>/lib.decorators.d.ts:37:39
     37| type DecoratorMetadataObject = Record<PropertyKey, unknown> & object;
                                               ^^^^^^^^^^^ [1]

References:
   <BUILTINS>/lib.es5.d.ts:1614:23
   1614| type Record<K extends keyof any, T> = {
                               ^^^^^^^^^ [2]


Error ---------------------------------------------------------------------------------- <BUILTINS>/lib.dom.d.ts:14164:5

Multiple indexers are not supported. [unsupported-syntax]

   14164|     [name: string]: any;
              ^^^^^^^^^^^^^^^^^^^


Error ------------------------------------------------------------------------ <BUILTINS>/lib.es2015.generator.d.ts:24:5

Cannot extend `IteratorObject` [1] with `Generator` because in property `next`: `TNext` [2] is incompatible with tuple
type [3]. [incompatible-type]

   <BUILTINS>/lib.es2015.generator.d.ts:24:5
   24|     next(...[value]: [] | [TNext]): IteratorResult<T, TReturn>;
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   <BUILTINS>/lib.es2015.generator.d.ts:22:70
   22| interface Generator<T = unknown, TReturn = any, TNext = any> extends IteratorObject<T, TReturn, TNext> {
                                                                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   <BUILTINS>/lib.esnext.iterator.d.ts:30:27
   30|     abstract next(value?: TNext): IteratorResult<T, TResult>;
                                 ^^^^^ [2]
   <BUILTINS>/lib.es2015.generator.d.ts:24:22
   24|     next(...[value]: [] | [TNext]): IteratorResult<T, TReturn>;
                            ^^ [3]


Error ------------------------------------------------------------------------ <BUILTINS>/lib.es2015.generator.d.ts:24:5

Cannot extend `IteratorObject` [1] with `Generator` because in property `next`: `TNext` [2] is incompatible with tuple
type [3]. [incompatible-type]

   <BUILTINS>/lib.es2015.generator.d.ts:24:5
   24|     next(...[value]: [] | [TNext]): IteratorResult<T, TReturn>;
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   <BUILTINS>/lib.es2015.generator.d.ts:22:70
   22| interface Generator<T = unknown, TReturn = any, TNext = any> extends IteratorObject<T, TReturn, TNext> {
                                                                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   <BUILTINS>/lib.esnext.iterator.d.ts:30:27
   30|     abstract next(value?: TNext): IteratorResult<T, TResult>;
                                 ^^^^^ [2]
   <BUILTINS>/lib.es2015.generator.d.ts:24:27
   24|     next(...[value]: [] | [TNext]): IteratorResult<T, TReturn>;
                                 ^^^^^^^ [3]


Error ----------------------------------------------------------------------- <BUILTINS>/lib.es2015.generator.d.ts:25:19

Cannot extend `IteratorObject` [1] with `Generator` because in property `return` > the first parameter: `TReturn` [2] is
incompatible with undefined [3]. [incompatible-type]

   <BUILTINS>/lib.es2015.generator.d.ts:25:19
   25|     return(value: TReturn): IteratorResult<T, TReturn>;
                         ^^^^^^^ [2]

References:
   <BUILTINS>/lib.es2015.generator.d.ts:22:70
   22| interface Generator<T = unknown, TReturn = any, TNext = any> extends IteratorObject<T, TReturn, TNext> {
                                                                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   <BUILTINS>/lib.es2015.iterable.d.ts:45:21
   45|     return?(value?: TReturn): IteratorResult<T, TReturn>;
                           ^^^^^^^ [3]


Error ------------------------------------------------------------------------- <BUILTINS>/lib.es2015.iterable.d.ts:56:1

Non-`abstract` class `IterableIterator` does not implement inherited `abstract` member next [1]. [invalid-abstract]

   <BUILTINS>/lib.es2015.iterable.d.ts:56:1
       v----------------------------------------------------------------------------------------------
   56| interface IterableIterator<T, TReturn = any, TNext = any> extends Iterator<T, TReturn, TNext> {
   57|     [Symbol.iterator](): IterableIterator<T, TReturn, TNext>;
   58| }
       ^

References:
   <BUILTINS>/lib.es2015.iterable.d.ts:44:5
   44|     next(...[value]: [] | [TNext]): IteratorResult<T, TReturn>;
           ^^^^ [1]


Error ------------------------------------------------------------------------- <BUILTINS>/lib.es2015.iterable.d.ts:63:1

Non-`abstract` class `IteratorObject` does not implement inherited `abstract` member next [1]. [invalid-abstract]

   <BUILTINS>/lib.es2015.iterable.d.ts:63:1
       v----------------------------------------------------------------------------------------------------
   63| interface IteratorObject<T, TReturn = unknown, TNext = unknown> extends Iterator<T, TReturn, TNext> {
   64|     [Symbol.iterator](): IteratorObject<T, TReturn, TNext>;
   65| }
       ^

References:
   <BUILTINS>/lib.es2015.iterable.d.ts:44:5
   44|     next(...[value]: [] | [TNext]): IteratorResult<T, TReturn>;
           ^^^^ [1]


Error ----------------------------------------------------------------- <BUILTINS>/lib.es2015.symbol.wellknown.d.ts:88:5

Illegal name. [unsupported-syntax]

   88|     [Symbol.toPrimitive](hint: string): symbol;
           ^^^^^^^^^^^^^^^^^^^^


Error ----------------------------------------------------------------- <BUILTINS>/lib.es2015.symbol.wellknown.d.ts:90:5

Illegal name. [unsupported-syntax]

   90|     readonly [Symbol.toStringTag]: string;
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


Error ----------------------------------------------------------------- <BUILTINS>/lib.es2015.symbol.wellknown.d.ts:98:5

Illegal name. [unsupported-syntax]

   98|     readonly [Symbol.unscopables]: {
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


Error ---------------------------------------------------------------- <BUILTINS>/lib.es2015.symbol.wellknown.d.ts:108:5

Illegal name. [unsupported-syntax]

   108|     readonly [Symbol.unscopables]: {
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


Error ---------------------------------------------------------------- <BUILTINS>/lib.es2015.symbol.wellknown.d.ts:117:5

Illegal name. [unsupported-syntax]

   117|     [Symbol.toPrimitive](hint: "default"): string;
            ^^^^^^^^^^^^^^^^^^^^


Error ---------------------------------------------------------------- <BUILTINS>/lib.es2015.symbol.wellknown.d.ts:121:5

Illegal name. [unsupported-syntax]

   121|     [Symbol.toPrimitive](hint: "string"): string;
            ^^^^^^^^^^^^^^^^^^^^


Error ---------------------------------------------------------------- <BUILTINS>/lib.es2015.symbol.wellknown.d.ts:125:5

Illegal name. [unsupported-syntax]

   125|     [Symbol.toPrimitive](hint: "number"): number;
            ^^^^^^^^^^^^^^^^^^^^


Error ---------------------------------------------------------------- <BUILTINS>/lib.es2015.symbol.wellknown.d.ts:134:5

Illegal name. [unsupported-syntax]

   134|     [Symbol.toPrimitive](hint: string): string | number;
            ^^^^^^^^^^^^^^^^^^^^


Error ---------------------------------------------------------------- <BUILTINS>/lib.es2015.symbol.wellknown.d.ts:138:5

Illegal name. [unsupported-syntax]

   138|     readonly [Symbol.toStringTag]: string;
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


Error ---------------------------------------------------------------- <BUILTINS>/lib.es2015.symbol.wellknown.d.ts:142:5

Illegal name. [unsupported-syntax]

   142|     readonly [Symbol.toStringTag]: string;
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


Error ---------------------------------------------------------------- <BUILTINS>/lib.es2015.symbol.wellknown.d.ts:146:5

Illegal name. [unsupported-syntax]

   146|     readonly [Symbol.toStringTag]: string;
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


Error ---------------------------------------------------------------- <BUILTINS>/lib.es2015.symbol.wellknown.d.ts:150:5

Illegal name. [unsupported-syntax]

   150|     readonly [Symbol.toStringTag]: string;
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


Error ---------------------------------------------------------------- <BUILTINS>/lib.es2015.symbol.wellknown.d.ts:154:5

Illegal name. [unsupported-syntax]

   154|     readonly [Symbol.toStringTag]: string;
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


Error ---------------------------------------------------------------- <BUILTINS>/lib.es2015.symbol.wellknown.d.ts:165:5

Illegal name. [unsupported-syntax]

   165|     [Symbol.hasInstance](value: any): boolean;
            ^^^^^^^^^^^^^^^^^^^^


Error ---------------------------------------------------------------- <BUILTINS>/lib.es2015.symbol.wellknown.d.ts:169:5

Illegal name. [unsupported-syntax]

   169|     readonly [Symbol.toStringTag]: string;
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


Error ---------------------------------------------------------------- <BUILTINS>/lib.es2015.symbol.wellknown.d.ts:173:5

Illegal name. [unsupported-syntax]

   173|     readonly [Symbol.toStringTag]: string;
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


Error ---------------------------------------------------------------- <BUILTINS>/lib.es2015.symbol.wellknown.d.ts:177:5

Illegal name. [unsupported-syntax]

   177|     readonly [Symbol.toStringTag]: string;
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


Error ---------------------------------------------------------------- <BUILTINS>/lib.es2015.symbol.wellknown.d.ts:181:5

Illegal name. [unsupported-syntax]

   181|     readonly [Symbol.species]: PromiseConstructor;
            ^^^^^^^^^^^^^^^^^^^^^^^^^


Error ---------------------------------------------------------------- <BUILTINS>/lib.es2015.symbol.wellknown.d.ts:190:5

Illegal name. [unsupported-syntax]

   190|     [Symbol.match](string: string): RegExpMatchArray | null;
            ^^^^^^^^^^^^^^


Error ---------------------------------------------------------------- <BUILTINS>/lib.es2015.symbol.wellknown.d.ts:199:5

Illegal name. [unsupported-syntax]

   199|     [Symbol.replace](string: string, replaceValue: string): string;
            ^^^^^^^^^^^^^^^^


Error ---------------------------------------------------------------- <BUILTINS>/lib.es2015.symbol.wellknown.d.ts:207:5

Illegal name. [unsupported-syntax]

   207|     [Symbol.replace](string: string, replacer: (substring: string, ...args: any[]) => string): string;
            ^^^^^^^^^^^^^^^^


Error ---------------------------------------------------------------- <BUILTINS>/lib.es2015.symbol.wellknown.d.ts:215:5

Illegal name. [unsupported-syntax]

   215|     [Symbol.search](string: string): number;
            ^^^^^^^^^^^^^^^


Error ---------------------------------------------------------------- <BUILTINS>/lib.es2015.symbol.wellknown.d.ts:229:5

Illegal name. [unsupported-syntax]

   229|     [Symbol.split](string: string, limit?: number): string[];
            ^^^^^^^^^^^^^^


Error ---------------------------------------------------------------- <BUILTINS>/lib.es2015.symbol.wellknown.d.ts:233:5

Illegal name. [unsupported-syntax]

   233|     readonly [Symbol.species]: RegExpConstructor;
            ^^^^^^^^^^^^^^^^^^^^^^^^^


Error --------------------------------------------------------------- <BUILTINS>/lib.es2015.symbol.wellknown.d.ts:242:22

Unsupported key in object type. Only identifier, string literal, and number literal keys are allowed. [illegal-key]

   242|     match(matcher: { [Symbol.match](string: string): RegExpMatchArray | null; }): RegExpMatchArray | null;
                             ^^^^^^^^^^^^^^


Error --------------------------------------------------------------- <BUILTINS>/lib.es2015.symbol.wellknown.d.ts:249:28

Unsupported key in object type. Only identifier, string literal, and number literal keys are allowed. [illegal-key]

   249|     replace(searchValue: { [Symbol.replace](string: string, replaceValue: string): string; }, replaceValue: string): string;
                                   ^^^^^^^^^^^^^^^^


Error --------------------------------------------------------------- <BUILTINS>/lib.es2015.symbol.wellknown.d.ts:256:28

Unsupported key in object type. Only identifier, string literal, and number literal keys are allowed. [illegal-key]

   256|     replace(searchValue: { [Symbol.replace](string: string, replacer: (substring: string, ...args: any[]) => string): string; }, replacer: (substring: string, ...args: any[]) => string): string;
                                   ^^^^^^^^^^^^^^^^


Error --------------------------------------------------------------- <BUILTINS>/lib.es2015.symbol.wellknown.d.ts:262:24

Unsupported key in object type. Only identifier, string literal, and number literal keys are allowed. [illegal-key]

   262|     search(searcher: { [Symbol.search](string: string): number; }): number;
                               ^^^^^^^^^^^^^^^


Error --------------------------------------------------------------- <BUILTINS>/lib.es2015.symbol.wellknown.d.ts:269:23

Unsupported key in object type. Only identifier, string literal, and number literal keys are allowed. [illegal-key]

   269|     split(splitter: { [Symbol.split](string: string, limit?: number): string[]; }, limit?: number): string[];
                              ^^^^^^^^^^^^^^


Error ---------------------------------------------------------------- <BUILTINS>/lib.es2015.symbol.wellknown.d.ts:273:5

Illegal name. [unsupported-syntax]

   273|     readonly [Symbol.toStringTag]: "ArrayBuffer";
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


Error ---------------------------------------------------------------- <BUILTINS>/lib.es2015.symbol.wellknown.d.ts:277:5

Illegal name. [unsupported-syntax]

   277|     readonly [Symbol.toStringTag]: string;
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


Error ---------------------------------------------------------------- <BUILTINS>/lib.es2015.symbol.wellknown.d.ts:281:5

Illegal name. [unsupported-syntax]

   281|     readonly [Symbol.toStringTag]: "Int8Array";
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


Error ---------------------------------------------------------------- <BUILTINS>/lib.es2015.symbol.wellknown.d.ts:285:5

Illegal name. [unsupported-syntax]

   285|     readonly [Symbol.toStringTag]: "Uint8Array";
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


Error ---------------------------------------------------------------- <BUILTINS>/lib.es2015.symbol.wellknown.d.ts:289:5

Illegal name. [unsupported-syntax]

   289|     readonly [Symbol.toStringTag]: "Uint8ClampedArray";
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


Error ---------------------------------------------------------------- <BUILTINS>/lib.es2015.symbol.wellknown.d.ts:293:5

Illegal name. [unsupported-syntax]

   293|     readonly [Symbol.toStringTag]: "Int16Array";
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


Error ---------------------------------------------------------------- <BUILTINS>/lib.es2015.symbol.wellknown.d.ts:297:5

Illegal name. [unsupported-syntax]

   297|     readonly [Symbol.toStringTag]: "Uint16Array";
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


Error ---------------------------------------------------------------- <BUILTINS>/lib.es2015.symbol.wellknown.d.ts:301:5

Illegal name. [unsupported-syntax]

   301|     readonly [Symbol.toStringTag]: "Int32Array";
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


Error ---------------------------------------------------------------- <BUILTINS>/lib.es2015.symbol.wellknown.d.ts:305:5

Illegal name. [unsupported-syntax]

   305|     readonly [Symbol.toStringTag]: "Uint32Array";
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


Error ---------------------------------------------------------------- <BUILTINS>/lib.es2015.symbol.wellknown.d.ts:309:5

Illegal name. [unsupported-syntax]

   309|     readonly [Symbol.toStringTag]: "Float32Array";
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


Error ---------------------------------------------------------------- <BUILTINS>/lib.es2015.symbol.wellknown.d.ts:313:5

Illegal name. [unsupported-syntax]

   313|     readonly [Symbol.toStringTag]: "Float64Array";
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


Error ---------------------------------------------------------------- <BUILTINS>/lib.es2015.symbol.wellknown.d.ts:317:5

Illegal name. [unsupported-syntax]

   317|     readonly [Symbol.species]: ArrayConstructor;
            ^^^^^^^^^^^^^^^^^^^^^^^^^


Error ---------------------------------------------------------------- <BUILTINS>/lib.es2015.symbol.wellknown.d.ts:320:5

Illegal name. [unsupported-syntax]

   320|     readonly [Symbol.species]: MapConstructor;
            ^^^^^^^^^^^^^^^^^^^^^^^^^


Error ---------------------------------------------------------------- <BUILTINS>/lib.es2015.symbol.wellknown.d.ts:323:5

Illegal name. [unsupported-syntax]

   323|     readonly [Symbol.species]: SetConstructor;
            ^^^^^^^^^^^^^^^^^^^^^^^^^


Error ---------------------------------------------------------------- <BUILTINS>/lib.es2015.symbol.wellknown.d.ts:326:5

Illegal name. [unsupported-syntax]

   326|     readonly [Symbol.species]: ArrayBufferConstructor;
            ^^^^^^^^^^^^^^^^^^^^^^^^^


Error --------------------------------------------------------------------- <BUILTINS>/lib.es2017.sharedmemory.d.ts:33:5

Illegal name. [unsupported-syntax]

   33|     readonly [Symbol.toStringTag]: "SharedArrayBuffer";
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


Error --------------------------------------------------------------------- <BUILTINS>/lib.es2017.sharedmemory.d.ts:39:5

Illegal name. [unsupported-syntax]

   39|     readonly [Symbol.species]: SharedArrayBufferConstructor;
           ^^^^^^^^^^^^^^^^^^^^^^^^^


Error -------------------------------------------------------------------- <BUILTINS>/lib.es2017.sharedmemory.d.ts:133:5

Illegal name. [unsupported-syntax]

   133|     readonly [Symbol.toStringTag]: "Atomics";
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


Error ------------------------------------------------------------------- <BUILTINS>/lib.es2018.asyncgenerator.d.ts:25:5

Cannot extend `AsyncIteratorObject` [1] with `AsyncGenerator` because in the first parameter of property `return`:
[incompatible-type]
 - Either undefined [2] is incompatible with `TReturn` [3].
 - Or undefined [2] is incompatible with `PromiseLike` [4].

   <BUILTINS>/lib.es2018.asyncgenerator.d.ts:25:5
   25|     return(value: TReturn | PromiseLike<TReturn>): Promise<IteratorResult<T, TReturn>>;
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

References:
   <BUILTINS>/lib.es2018.asyncgenerator.d.ts:22:75
   22| interface AsyncGenerator<T = unknown, TReturn = any, TNext = any> extends AsyncIteratorObject<T, TReturn, TNext> {
                                                                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]
   <BUILTINS>/lib.es2018.asynciterable.d.ts:34:21
   34|     return?(value?: TReturn | PromiseLike<TReturn>): Promise<IteratorResult<T, TReturn>>;
                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]
   <BUILTINS>/lib.es2018.asyncgenerator.d.ts:25:19
   25|     return(value: TReturn | PromiseLike<TReturn>): Promise<IteratorResult<T, TReturn>>;
                         ^^^^^^^ [3]
   <BUILTINS>/lib.es2018.asyncgenerator.d.ts:25:29
   25|     return(value: TReturn | PromiseLike<TReturn>): Promise<IteratorResult<T, TReturn>>;
                                   ^^^^^^^^^^^^^^^^^^^^ [4]


Error -------------------------------------------------------------------------- <BUILTINS>/lib.es2020.bigint.d.ts:121:5

Illegal name. [unsupported-syntax]

   121|     readonly [Symbol.toStringTag]: "BigInt";
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


Error -------------------------------------------------------------------------- <BUILTINS>/lib.es2020.bigint.d.ts:386:5

Illegal name. [unsupported-syntax]

   386|     readonly [Symbol.toStringTag]: "BigInt64Array";
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


Error -------------------------------------------------------------------------- <BUILTINS>/lib.es2020.bigint.d.ts:677:5

Illegal name. [unsupported-syntax]

   677|     readonly [Symbol.toStringTag]: "BigUint64Array";
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


Error ----------------------------------------------------------------- <BUILTINS>/lib.es2020.symbol.wellknown.d.ts:41:5

Illegal name. [unsupported-syntax]

   41|     [Symbol.matchAll](str: string): RegExpStringIterator<RegExpMatchArray>;
           ^^^^^^^^^^^^^^^^^


Error -------------------------------------------------------------------------- <BUILTINS>/lib.es2021.weakref.d.ts:23:5

Illegal name. [unsupported-syntax]

   23|     readonly [Symbol.toStringTag]: "WeakRef";
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


Error -------------------------------------------------------------------------- <BUILTINS>/lib.es2021.weakref.d.ts:47:5

Illegal name. [unsupported-syntax]

   47|     readonly [Symbol.toStringTag]: "FinalizationRegistry";
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


Error ----------------------------------------------------------------------------------- <BUILTINS>/lib.es5.d.ts:229:39

Cannot resolve name `U`. [cannot-resolve-name]

   229|     freeze<T extends { [idx: string]: U | null | undefined | object; }, U extends string | bigint | number | boolean | symbol>(o: T): Readonly<T>;
                                              ^


Error ----------------------------------------------------------------------- <BUILTINS>/lib.esnext.decorators.d.ts:28:5

Illegal name. [unsupported-syntax]

   28|     [Symbol.metadata]: DecoratorMetadata | null;
           ^^^^^^^^^^^^^^^^^


Error ---------------------------------------------------------------------- <BUILTINS>/lib.esnext.disposable.d.ts:114:5

Illegal name. [unsupported-syntax]

   114|     readonly [Symbol.toStringTag]: string;
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


Error ---------------------------------------------------------------------- <BUILTINS>/lib.esnext.disposable.d.ts:181:5

Illegal name. [unsupported-syntax]

   181|     readonly [Symbol.toStringTag]: string;
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


Error ------------------------------------------------------------------------- <BUILTINS>/lib.esnext.float16.d.ts:370:5

Illegal name. [unsupported-syntax]

   370|     readonly [Symbol.toStringTag]: "Float16Array";
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


Error ------------------------------------------------------------------------- <BUILTINS>/lib.esnext.iterator.d.ts:26:1

Cannot use value export statements in a library file. The statement will be ignored. [unsupported-syntax]

   26| export {};
       ^^^^^^^^^^


Error ------------------------------------------------------------------------- <BUILTINS>/lib.esnext.iterator.d.ts:39:1

Cannot use declare global statements in a library file. The statement will be ignored. [unsupported-syntax]

        v---------------
    39| declare global {
    40|     // Global `IteratorObject<T, TReturn, TNext>` interface that can be augmented by polyfills
    41|     interface IteratorObject<T, TReturn, TNext> {
    42|         /**
    43|          * Returns this iterator.
    44|          */
    45|         [Symbol.iterator](): IteratorObject<T, TReturn, TNext>;
    46|         /**
    47|          * Creates an iterator whose values are the result of applying the callback to the values from this iterator.
    48|          * @param callbackfn A function that accepts up to two arguments to be used to transform values from the underlying iterator.
    49|          */
    50|         map<U>(callbackfn: (value: T, index: number) => U): IteratorObject<U, undefined, unknown>;
    51|         /**
    52|          * Creates an iterator whose values are those from this iterator for which the provided predicate returns true.
    53|          * @param predicate A function that accepts up to two arguments to be used to test values from the underlying iterator.
      :
   130|         find<S extends T>(predicate: (value: T, index: number) => value is S): S | undefined;
   131|         find(predicate: (value: T, index: number) => unknown): T | undefined;
   132|         readonly [Symbol.toStringTag]: string;
   133|     }
   134|     // Global `IteratorConstructor` interface that can be augmented by polyfills
   135|     interface IteratorConstructor extends IteratorObjectConstructor {
   136|         /**
   137|          * Creates a native iterator from an iterator or iterable object.
   138|          * Returns its input if the input already inherits from the built-in Iterator class.
   139|          * @param value An iterator or iterable object to convert a native iterator.
   140|          */
   141|         from<T>(value: Iterator<T, unknown, undefined> | Iterable<T, unknown, undefined>): IteratorObject<T, undefined, unknown>;
   142|     }
   143|     var Iterator: IteratorConstructor;
   144| }
        ^



Found 69 errors
